argocd/infrastructure/backrest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backrest
  namespace: backrest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backrest
  template:
    metadata:
      labels:
        app: backrest
    spec:
      containers:
        - name: backrest
          image: ghcr.io/garethgeorge/backrest:latest
          volumeMounts:
            - name: backrest-data
              mountPath: /data
              subPath: data
            - name: backrest-data
              mountPath: /config
              subPath: config
            - name: backrest-data
              mountPath: /cache
              subPath: cache
            - name: backrest-data
              mountPath: /tmp
              subPath: tmp
            - name: backrest-data
              mountPath: /root/.config/rclone
              subPath: rclone
          ports:
            - containerPort: 9898
      volumes:
        - name: backrest-data
          persistentVolumeClaim:
            claimName: backrest-pvc
