argocd/infrastructure/backrest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backrest
  namespace: backrest
spec:
  ports:
  - port: 80
    targetPort: 9898
  selector:
    app: backrest
