argocd/infrastructure/backrest/backrest-ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backrest-internal-route
  namespace: restic
spec:
  parentRefs:
  - group: gateway.networking.k8s.io	
    kind: Gateway	
    name: gateway-internal
    namespace: default
  hostnames: ["backrest.internal.lazydogs.work"]
  rules:
  - backendRefs:
      - group: ''	
        kind: Service
        name: backrest
        port: 80
        weight: 1
    matches:
      - path:
          type: PathPrefix
          value: /
